force-app/main/default/objects/Contact/fields/Contact_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_Icon__c</fullName>
    <formula>IF(ISPICKVAL(Contact_Status__c,&quot;Active&quot;),
IMAGE(&quot;/resource/1679893164000/Contact_Icon_Active&quot;,&quot;Active&quot;,30,30),
IMAGE(&quot;/resource/1679893144000/Contact_Icon_Inactive&quot;,&quot;Inactive&quot;,30,30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>