force-app/main/default/objects/Contact/validationRules/Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation</fullName>
    <active>true</active>
    <description>Validate proper formatting on Mobile number.</description>
    <errorConditionFormula>IF(
ISBLANK( MobilePhone ),false,
OR(
NOT(CONTAINS(Phone,&quot;+&quot;)),
FIND(&quot;+&quot;,MobilePhone ) != 1,
CONTAINS(MobilePhone , &quot;(&quot;),
CONTAINS(MobilePhone , &quot;)&quot;),
CONTAINS(MobilePhone , &quot; &quot;),
CONTAINS(MobilePhone , &quot;-&quot;),
CONTAINS(MobilePhone , &quot;&amp;&quot;),
CONTAINS(MobilePhone , &quot;#&quot;),
CONTAINS(MobilePhone , &quot;*&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please enter mobile in format &quot;+XXXXXXXXXXX&quot; (Ex: +4912341234567).</errorMessage>
</ValidationRule>