force-app/main/default/objects/Contact/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
ISBLANK(Phone),false,
OR(
NOT(CONTAINS(Phone,&quot;+&quot;)),
FIND(&quot;+&quot;,Phone) != 1,
CONTAINS(Phone, &quot;(&quot;),
CONTAINS(Phone, &quot;)&quot;),
CONTAINS(Phone, &quot; &quot;),
CONTAINS(Phone, &quot;-&quot;),
CONTAINS(Phone, &quot;&amp;&quot;),
CONTAINS(Phone, &quot;#&quot;),
CONTAINS(Phone, &quot;*&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter phone in format &quot;+XXXXXXXXXXX&quot; (Ex: +4912341234567).</errorMessage>
</ValidationRule>